@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1608: Add option in WikipediaToSequenceFile to remove category labels from documents (apalumbo)
+
   MAHOUT-1604: Spark version of rowsimilarity driver and associated additions to SimilarityAnalysis.scala (pferrel)
 
   MAHOUT-1500: H2O Integration (Anand Avati via apalumbo)
